--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.8.1"
   },
